--- a/PPNG/PPNG.ipynb
+++ b/PPNG/PPNG.ipynb
@@ -52,65 +52,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-29T20:34:01.466714Z",
-     "start_time": "2019-10-29T20:34:01.344738Z"
-    },
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def get_ramos(entcodigo, ano):\n",
-    "    ramos = []\n",
-    "    try:\n",
-    "        request = requests.get(\n",
-    "            \"https://www2.susep.gov.br/menuestatistica/SES/premiosesinistros.aspx?id=54\")\n",
-    "        sopa = BeautifulSoup(request.text, \"html.parser\")\n",
-    "\n",
-    "        params = (('id', '54'))\n",
-    "        data = {\n",
-    "            '__VIEWSTATE': sopa.find(\"input\", {\"name\": \"__VIEWSTATE\"})[\"value\"],\n",
-    "            '__VIEWSTATEGENERATOR': sopa.find(\"input\", {\"name\": \"__VIEWSTATEGENERATOR\"})[\"value\"],\n",
-    "            '__EVENTVALIDATION': sopa.find(\"input\", {\"name\": \"__EVENTVALIDATION\"})[\"value\"],\n",
-    "            'ctl00$ContentPlaceHolder1$edEmpresas': entcodigo.ljust(10, \" \"),\n",
-    "            'ctl00$ContentPlaceHolder1$edInicioPer': str(ano)+\"01\",\n",
-    "            'ctl00$ContentPlaceHolder1$edFimPer': str(ano)+\"12\",\n",
-    "            'ctl00$ContentPlaceHolder1$optAgrupamento': 'RAM',\n",
-    "            'ctl00$ContentPlaceHolder1$btnProcessao': 'Processar'}\n",
-    "\n",
-    "        request = requests.post(\n",
-    "            'https://www2.susep.gov.br/menuestatistica/SES/premiosesinistros.aspx', params=params, data=data)\n",
-    "        sopa = BeautifulSoup(request.text, \"html.parser\")\n",
-    "        elements = sopa.find_all(\"td\", {\"align\": \"left\"})\n",
-    "        for element in elements[3:]:\n",
-    "            ramos.append(element.text[:4])\n",
-    "        return ramos\n",
-    "    except:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2019-10-29T20:34:23.387955Z",
      "start_time": "2019-10-29T20:34:01.469671Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "columns = [\"1026\", \"1027\", \"1028\", \"1029\", \"1030\",\n",
-    "          \"1031\", \"1032\", \"1033\", \"1034\", \"1035\", \"1036\", \"1037\"]\n",
-    "os.system(\"cls\")\n",
-    "entcodigo = input(\"Digite um ENTCODIGO: \\n\")\n",
-    "ano = input(\"\\nDigite um ano (Formato aaaa): \\n\")\n",
+    "columns = [str(i) in range(1065,1077)]\n",
     "\n",
-    "ramos = get_ramos(entcodigo, ano)\n",
+    "os.system(\"cls\")\n",
+    "\n",
     "len_ramos = len(ramos)\n",
     "index = [[7]*len_ramos+[8]*len_ramos+[9]*len_ramos+[10]*len_ramos,ramos*4]\n",
     "\n",
@@ -129,9 +81,7 @@
      "end_time": "2019-10-29T20:34:23.410948Z",
      "start_time": "2019-10-29T20:34:23.390955Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -192,6 +142,21 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2019-10-29T20:34:01.466714Z",
+     "start_time": "2019-10-29T20:34:01.344738Z"
+    },
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2019-10-29T20:34:49.587824Z",
      "start_time": "2019-10-29T20:34:49.573833Z"
     }
@@ -212,6 +177,7 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "print(\"Exportando para Excel...\\n\\n\")\n",
     "with pd.ExcelWriter('Provisões.xlsx') as writer:  # doctest: +SKIP\n",
     "    df_ppng.to_excel(writer, sheet_name='PPNG')\n",
@@ -219,7 +185,8 @@
     "    df_rve.to_excel(writer, sheet_name='RVE')\n",
     "print(\"Sucesso!\")\n",
     "sleep(2)\n",
-    "quit()"
+    "quit()\n",
+    "\"\"\""
    ]
   },
   {
@@ -232,11 +199,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "df_ppng[\"PPNG\"] = df_ppng[\"1026\"] + df_ppng[\"1027\"] - df_ppng[\"1027\"]\n",
-    "df_ppng[\"PPNG\"] -= (df_ppng[\"1030\"] + df_ppng[\"1031\"] - df_ppng[\"1032\"])\n",
-    "df_ppng[\"PPNG\"] -= (df_ppng[\"1034\"] + df_ppng[\"1035\"] - df_ppng[\"1036\"])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
