--- a/Quadros/379/379.ipynb
+++ b/Quadros/379/379.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:47:07.895570Z",
-     "start_time": "2019-11-05T13:47:06.864118Z"
+     "end_time": "2019-11-05T17:49:05.405665Z",
+     "start_time": "2019-11-05T17:49:04.338276Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:47:07.906568Z",
-     "start_time": "2019-11-05T13:47:07.898572Z"
+     "end_time": "2019-11-05T17:49:05.419659Z",
+     "start_time": "2019-11-05T17:49:05.409663Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:47:17.024173Z",
-     "start_time": "2019-11-05T13:47:07.912569Z"
+     "end_time": "2019-11-05T17:49:25.144159Z",
+     "start_time": "2019-11-05T17:49:05.423655Z"
     },
     "code_folding": []
    },
@@ -92,7 +92,346 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "40105it [00:06, 6505.25it/s]\n"
+      "1it [00:03,  3.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "516it [00:03,  2.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "1196it [00:03,  1.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "39876it [00:05, 775.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "77437it [00:07, 20022.79it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "113175it [00:09, 19590.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "115160it [00:09, 14039.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "150023it [00:11, 21992.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "184714it [00:13, 23432.14it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "213843it [00:14, 25350.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "216415it [00:14, 19110.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "249886it [00:16, 25840.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111111111 & 12760781534\n",
+      "11111111111 & 12760781534\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 23269030720\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 04306589749\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 07291817587\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 09544500782\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 29907837768\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 28980964749\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 03029797783\n",
+      "11111111111 & 63483076700\n",
+      "11111111111 & 63483076700\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "284252it [00:17, 16037.25it/s]\n"
      ]
     }
    ],
@@ -230,8 +569,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:47:17.057153Z",
-     "start_time": "2019-11-05T13:47:17.027171Z"
+     "end_time": "2019-11-05T17:49:25.180137Z",
+     "start_time": "2019-11-05T17:49:25.147157Z"
     }
    },
    "outputs": [
@@ -264,82 +603,82 @@
        "    <tr>\n",
        "      <th>7395.1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.5</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.6</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.7</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.8</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.9</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.10</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.11</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.12</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.13</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.14</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.15</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7395.18</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>40105</td>\n",
+       "      <td>284252</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -347,22 +686,22 @@
       ],
       "text/plain": [
        "         Linhas afetadas  Linhas Analizadas\n",
-       "7395.1               0.0              40105\n",
-       "7395.2               0.0              40105\n",
-       "7395.3               0.0              40105\n",
-       "7395.4               0.0              40105\n",
-       "7395.5               0.0              40105\n",
-       "7395.6               0.0              40105\n",
-       "7395.7               0.0              40105\n",
-       "7395.8               0.0              40105\n",
-       "7395.9               0.0              40105\n",
-       "7395.10              0.0              40105\n",
-       "7395.11             28.0              40105\n",
-       "7395.12              0.0              40105\n",
-       "7395.13              0.0              40105\n",
-       "7395.14              0.0              40105\n",
-       "7395.15              0.0              40105\n",
-       "7395.18              0.0              40105"
+       "7395.1               0.0             284252\n",
+       "7395.2               0.0             284252\n",
+       "7395.3               0.0             284252\n",
+       "7395.4               0.0             284252\n",
+       "7395.5               0.0             284252\n",
+       "7395.6               0.0             284252\n",
+       "7395.7               0.0             284252\n",
+       "7395.8               0.0             284252\n",
+       "7395.9               0.0             284252\n",
+       "7395.10              0.0             284252\n",
+       "7395.11            179.0             284252\n",
+       "7395.12              0.0             284252\n",
+       "7395.13              0.0             284252\n",
+       "7395.14              0.0             284252\n",
+       "7395.15              0.0             284252\n",
+       "7395.18              0.0             284252"
       ]
      },
      "execution_count": 4,
@@ -380,8 +719,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T13:47:17.918144Z",
-     "start_time": "2019-11-05T13:47:17.060154Z"
+     "end_time": "2019-11-05T17:49:26.034758Z",
+     "start_time": "2019-11-05T17:49:25.183140Z"
     }
    },
    "outputs": [],
@@ -391,15 +730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-31T19:53:22.965649Z",
-     "start_time": "2019-10-31T19:53:22.958654Z"
+     "end_time": "2019-11-05T17:49:26.042754Z",
+     "start_time": "2019-11-05T17:49:26.037757Z"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = to_datetime(\"19931116\")"
+   ]
   }
  ],
  "metadata": {
