--- a/Quadros/381/381.ipynb
+++ b/Quadros/381/381.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T14:01:46.544186Z",
-     "start_time": "2019-11-05T14:01:45.421829Z"
+     "end_time": "2019-11-05T18:52:57.099522Z",
+     "start_time": "2019-11-05T18:52:56.061076Z"
     }
    },
    "outputs": [],
@@ -24,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T14:01:46.562177Z",
-     "start_time": "2019-11-05T14:01:46.547185Z"
+     "end_time": "2019-11-05T18:52:57.112474Z",
+     "start_time": "2019-11-05T18:52:57.102481Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T14:02:13.894021Z",
-     "start_time": "2019-11-05T14:01:46.566174Z"
+     "end_time": "2019-11-05T18:53:07.629650Z",
+     "start_time": "2019-11-05T18:52:57.117472Z"
     },
     "code_folding": []
    },
@@ -101,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "13594it [00:24, 544.42it/s]\n"
+      "108916it [00:06, 15849.81it/s]\n"
      ]
     }
    ],
@@ -118,10 +118,11 @@
     "         \"7397.21\", \"7397.22\", \"7397.23\", \"7397.24\", \"7397.25\"]\n",
     "\n",
     "df_criticas = DF(index=index, columns=[\"Linhas afetadas\"])\n",
-    "df_criticas.fillna(0.0, inplace=True)\n",
+    "df_criticas.fillna(0, inplace=True)\n",
     "lines = 0\n",
     "\n",
     "for n, line in tqdm(get_lines()):\n",
+    "    line = line.strip().replace(\",\",\".\")\n",
     "    PBCSEQ = line[0:6]\n",
     "    MRFMESANO = line[11:19]\n",
     "    QUAID = line[19:22]\n",
@@ -156,7 +157,7 @@
     "    if len(line) != 133:\n",
     "        df_criticas.loc[\"7397.2\", \"Linhas afetadas\"] += 1          \n",
     "    # 7397.3 -> Verifica se o campo sequencial é numérico e válido (PBCSEQ)\n",
-    "    if n != PBCSEQ:\n",
+    "    if n != int(PBCSEQ):\n",
     "        df_criticas.loc[\"7397.3\", \"Linhas afetadas\"] += 1          \n",
     "    # 7397.4 -> Verifica se o código da entidade é válido (ENTCODIGO)\n",
     "    if ENTCODIGO_input != ENTCODIGO:\n",
@@ -223,7 +224,7 @@
     "    try:\n",
     "        float(PBCTAXAJUROS)\n",
     "    except:\n",
-    "        df_criticas.loc[\"7397.24\", \"Linhas afetadas\"] += 1  \n",
+    "        df_criticas.loc[\"7397.22\", \"Linhas afetadas\"] += 1  \n",
     "    # 7397.23 -> Verifica se PBCPERCREV é percentual válido e consta entre 0 e 100%\n",
     "    try:\n",
     "        float(PBCTAXAJUROS)\n",
@@ -249,8 +250,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-05T14:02:13.928998Z",
-     "start_time": "2019-11-05T14:02:13.897037Z"
+     "end_time": "2019-11-05T18:53:07.661612Z",
+     "start_time": "2019-11-05T18:53:07.632628Z"
     }
    },
    "outputs": [
@@ -282,128 +283,128 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7397.1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.2</th>\n",
-       "      <td>13594.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.3</th>\n",
-       "      <td>13594.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.5</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.6</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.7</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.8</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.9</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.10</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.11</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.12</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.13</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.14</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.15</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.16</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.17</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.18</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.19</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.20</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.21</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.22</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.23</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.24</th>\n",
-       "      <td>27188.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7397.25</th>\n",
-       "      <td>13594.0</td>\n",
-       "      <td>13594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108916</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -411,31 +412,31 @@
       ],
       "text/plain": [
        "         Linhas afetadas  Linhas Analizadas\n",
-       "7397.1               0.0              13594\n",
-       "7397.2           13594.0              13594\n",
-       "7397.3           13594.0              13594\n",
-       "7397.4               0.0              13594\n",
-       "7397.5               0.0              13594\n",
-       "7397.6               0.0              13594\n",
-       "7397.7               0.0              13594\n",
-       "7397.8               0.0              13594\n",
-       "7397.9               0.0              13594\n",
-       "7397.10              0.0              13594\n",
-       "7397.11              0.0              13594\n",
-       "7397.12              0.0              13594\n",
-       "7397.13              0.0              13594\n",
-       "7397.14              0.0              13594\n",
-       "7397.15              0.0              13594\n",
-       "7397.16              0.0              13594\n",
-       "7397.17              0.0              13594\n",
-       "7397.18              0.0              13594\n",
-       "7397.19              0.0              13594\n",
-       "7397.20              0.0              13594\n",
-       "7397.21              0.0              13594\n",
-       "7397.22              0.0              13594\n",
-       "7397.23              0.0              13594\n",
-       "7397.24          27188.0              13594\n",
-       "7397.25          13594.0              13594"
+       "7397.1                 0             108916\n",
+       "7397.2                 0             108916\n",
+       "7397.3                 0             108916\n",
+       "7397.4                 0             108916\n",
+       "7397.5                 0             108916\n",
+       "7397.6                 0             108916\n",
+       "7397.7                 0             108916\n",
+       "7397.8                 0             108916\n",
+       "7397.9                 0             108916\n",
+       "7397.10                0             108916\n",
+       "7397.11                0             108916\n",
+       "7397.12                0             108916\n",
+       "7397.13                0             108916\n",
+       "7397.14                0             108916\n",
+       "7397.15                0             108916\n",
+       "7397.16                0             108916\n",
+       "7397.17                0             108916\n",
+       "7397.18                0             108916\n",
+       "7397.19                0             108916\n",
+       "7397.20                0             108916\n",
+       "7397.21                0             108916\n",
+       "7397.22                0             108916\n",
+       "7397.23                0             108916\n",
+       "7397.24                0             108916\n",
+       "7397.25                0             108916"
       ]
      },
      "execution_count": 4,
